# Python-BadApple

./: README.md  pyproject.toml
src/: main.py  reader.py
